2006-02-28  Pavel Tsekov  <ptsekov@gmx.net>

	* widget.h (struct WRadio): Remove unused field
	`upper_letter_is_hotkey'.
	(radio_new): Remove the last argument from the function
	declaration - it is unused.
	* widget.c (radio_new): Remove the last argument from the
	function declaration - it is unused.
	* boxes.c: Adjust all callers to reflect the changes above.
	* layout.c: Likewise.
	* listmode.c: Likewise.
	* option.c: Likewise.
	* wtools.c: Likewise.

2006-02-28  Pavel Tsekov  <ptsekov@gmx.net>

	* boxes.c (configure_vfs) [!USE_NETCODE]: Fix off-by-one error.

2006-02-24  Pavel Tsekov  <ptsekov@gmx.net>

	* subshell.c (synchronize): Do not discard user input if the panels
	are off.

2006-02-23  Pavel Tsekov  <ptsekov@gmx.net>

	* setup.c [USE_NETCODE]: Include fish.h .
	(int_options) [USE_NETCODE]: Add support for user configurable
	expiration timeout of FISH directory cache entries.

2006-02-21  Pavel Tsekov  <ptsekov@gmx.net>

	*  cons.saver.c [HAVE_CONFIG_H]: Include config.h .

2006-02-14  David Martin  <dmartina@excite.com>

	* hotlist.c (remove_from_hotlist): Fix l18n macro N_() to _().

2006-02-09  Pavel Tsekov  <ptsekov@gmx.net>

	* wtools.c (quick_dialog_skip): Do not set `lines' and `cols'
	members of the newly created dialog explicitly - create_dlg()
	does this.

2006-02-08  Pavel Tsekov  <ptsekov@gmx.net>

	* screen.c (panel_callback): Reset the `dirty' flag after the
	panel has been repainted on focus.

2006-02-06  Pavel Tsekov  <ptsekov@gmx.net>

	* widget.c (buttonbar_set_label): Fix `comparison of distinct
	pointer types lacks a cast' gcc warning.

2006-02-05  Pavel Tsekov  <ptsekov@gmx.net>

	* hotlist.c (hotlist_has_dot_dot): Define new global
	variable.
	(add_dotdot_to_list): Define new function.
	(HotListType): Add HL_TYPE_DOTDOT.
	(update_path_name): Handle HL_TYPE_DOTDOT entries the same way as
	HL_TYPE_ENTRY entries.
	(fill_listbox): Likewise.
	(hotlist_button_callback): Go up one level when enter is pressed on